--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,5 @@ jobs:
       - name: install buildx
         run: make buildx-prepare
 
-      - name: build
-        run: make buildx
+      - name: build and push
+        run: make buildx-push-tag
