--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: build
 
-on: [push]
+on:
+  push:
+    tags:
+      - '*'
 
 jobs:
   build:
@@ -8,18 +11,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
-      - name: install qemu
-        run: docker run --rm --privileged hypriot/qemu-register
-
       - name: checkout
         uses: actions/checkout@v1
+
+      - name: prepare buildx
+        id: buildx
+        uses: crazy-max/ghaction-docker-buildx@v1
+        with:
+          version: v0.3.1
+
+      - name: get the version
+        id: container
+        uses: qmx/ghaction-container-tag@master
+        with:
+          dockerhub_namespace: "${{ secrets.DOCKERHUB_NAMESPACE }}"
 
       - name: login to docker hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: install buildx
-        run: make buildx-prepare
-
-      - name: build and push
-        run: make buildx-push-tag
+      - name: build and push latest
+        run: docker buildx build --platform linux/amd64,linux/arm/v7 --push -t "${{ steps.container.outputs.image }}:${{ steps.container.outputs.version }}" .
